fix: missing border-radius

--- a/components/redesign/CardsGridRedesign/components/CardWithImageRedesign/CardWithImageRedesign.scss
+++ b/components/redesign/CardsGridRedesign/components/CardWithImageRedesign/CardWithImageRedesign.scss
@@ -1,8 +1,9 @@
 .card-with-image-redesign {
   &__image {
     position: relative;
+    overflow: hidden;
+    border-radius: 2px;
     height: 242px;
-    background-color: $color-grey-100-redesign;
 
     img {
       display: block;
