--- a/components/redesign/FormBlockRedesign/FormBlockRedesign.scss
+++ b/components/redesign/FormBlockRedesign/FormBlockRedesign.scss
@@ -11,11 +11,17 @@
     }
   }
 
+  &__form-wrapper {
+    border-radius: 2px;
+    background-color: $color-black;
+  }
+
   &__inner {
     @include tablet {
       margin: 0 auto;
       max-width: 556px;
-      background-color: $color-black;
+
+      // background-color: $color-black;
     }
 
     @include tablet-xl {
@@ -75,6 +81,7 @@
   &__aside-img {
     position: relative;
     flex-shrink: 0;
+    overflow: hidden;
     border-radius: 2px;
     width: 101px;
     height: 72px;
