--- a/components/redesign/FormRedesign/components/TextareaRedesign/TextareaRedesign.scss
+++ b/components/redesign/FormRedesign/components/TextareaRedesign/TextareaRedesign.scss
@@ -13,6 +13,7 @@
     outline: none;
     border: none;
     border-bottom: 1px solid transparent;
+    border-radius: 2px;
     padding: 0;
     padding: 24px 16px 8px;
     width: 100%;
